Bug 334855 - Plasmoid shortcuts not remembered across sessions
Summary: Plasmoid shortcuts not remembered across sessions
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: unspecified Linux
: NOR normal
Target Milestone: 1.0
Assignee: Sebastian Kügler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-16 07:00 UTC by Antonio Rojas
Modified: 2014-05-16 08:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2014-05-16 07:00:01 UTC
If you assign a shortcut to a plasmoid, it will be removed on the next plasma restart.

Reproducible: Always
Comment 1 Marco Martin 2014-05-16 08:03:48 UTC
Git commit 2d29445164b3e96a0cb8647675b383195c9ab794 by Marco Martin.
Committed on 16/05/2014 at 08:02.
Pushed by mart into branch 'master'.

set the shortcut to the action

M  +1    -0    src/plasma/applet.cpp

http://commits.kde.org/plasma-framework/2d29445164b3e96a0cb8647675b383195c9ab794