set the shortcut to the action

BUG:334855